--- a/style.css
+++ b/style.css
@@ -474,3 +474,16 @@ p {
         padding-top: 15px;
     }
 }
+.contributors {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3rem;
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  #imgid {
+   border-radius: 50%;
+   width: 120px;
+   height: 120px;
+  }
